--- a/pokeFrontend/index.html
+++ b/pokeFrontend/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/assets/pokemon-icon.png" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pokeee</title>
 </head>
