--- a/pokeFrontend/index.html
+++ b/pokeFrontend/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/assets/pokemon-icon.png" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pokeee</title>
+  <title>Pokemon</title>
 </head>
 
 <body>
